--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     return width / 2 - wizardWidth / 2;
   };
   var getWizardY = function (height) {
-    return height / 3;
+    return height / 3 - getWizardHeight(wizardWidth) / 2;
   };
 </script>
 <script src="js/game.js"></script>
